new swag init
